fix(ui): :lipstick: resolve scrollbar bug
fix the scrollbar shift of the app on pages that don't need scrolling

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -69,6 +69,9 @@
 }
 
 @layer base {
+	html {
+		overflow-y: scroll;
+	}
 	* {
 		@apply border-border;
 	}
@@ -88,6 +91,7 @@
 	}
 
 	::-webkit-scrollbar-thumb {
+		background: transparent;
 		border-radius: var(--radius);
 	}
 
